[tool.poetry]
name = "actionsheets"
version = "0.0.10"
description = "Quick-reference sheets defined in terms of a desired action and a code solution"
authors = ["Niek Den Teuling <niekdt@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^1.0"
rich = "^13.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
