[tool.poetry]
name = "actionsheets"
version = "0.2.0"
description = "Provides a large collection of searchable quick-reference code-snippet sheets defined in terms of a desired action and corresponding code snippet."
authors = ["Niek Den Teuling"]
license = "MIT"
readme = "README.md"
homepage = "https://actionsheets.streamlit.app/"
repository = "https://github.com/niekdt/actionsheets"
keywords = ["cheatsheets", "code snippets", "quick reference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Natural Language :: English",
    "Programming Language :: R",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent"
]

[tool.poetry.urls]
"Issue tracker" = "https://github.com/niekdt/actionsheets/issues"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^1.0"
rich = "^13.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
